8268638: semaphores of AsyncLogWriter may be broken when JVM is exiting.