src/hotspot/share/logging/logAsyncWriter.cpp
@@ -28,23 +28,20 @@
 #include "logging/logHandle.hpp"
 #include "runtime/atomic.hpp"
 
-Semaphore AsyncLogWriter::_sem(0);
-Semaphore AsyncLogWriter::_io_sem(1);
-
 class AsyncLogLocker : public StackObj {
- private:
-  static Semaphore _lock;
+  Semaphore* _sem;
+
  public:
-  AsyncLogLocker() {
-    _lock.wait();
+  AsyncLogLocker(Semaphore* sem): _sem(sem) {
+    assert(sem != nullptr && sem->value() == 1,
+          "given semaphore must guarantee mutual exclusion!");
+    _sem->wait();
   }
 
   ~AsyncLogLocker() {
-    _lock.signal();
+    _sem->signal();
   }
 };
-
-Semaphore AsyncLogLocker::_lock(1);
 
 void AsyncLogWriter::enqueue_locked(const AsyncLogMessage& msg) {
   if (_buffer.size() >= _buffer_max_size)  {
@@ -64,7 +61,7 @@ void AsyncLogWriter::enqueue(LogFileOutput& output, const LogDecorations& decora
   AsyncLogMessage m(output, decorations, os::strdup(msg));
 
   { // critical area
-    AsyncLogLocker lock;
+    AsyncLogLocker locker(&_lock);
     enqueue_locked(m);
   }
 }
@@ -72,7 +69,7 @@ void AsyncLogWriter::enqueue(LogFileOutput& output, const LogDecorations& decora
 // LogMessageBuffer consists of a multiple-part/multiple-line messsage.
 // The lock here guarantees its integrity.
 void AsyncLogWriter::enqueue(LogFileOutput& output, LogMessageBuffer::Iterator msg_iterator) {
-  AsyncLogLocker lock;
+  AsyncLogLocker locker(&_lock);
 
   for (; !msg_iterator.is_at_end(); msg_iterator++) {
     AsyncLogMessage m(output, msg_iterator.decorations(), os::strdup(msg_iterator.message()));
@@ -81,7 +78,8 @@ void AsyncLogWriter::enqueue(LogFileOutput& output, LogMessageBuffer::Iterator m
 }
 
 AsyncLogWriter::AsyncLogWriter()
-  : _initialized(false),
+  : _lock(1), _sem(0), _io_sem(1),
+    _initialized(false),
     _stats(17 /*table_size*/) {
   if (os::create_thread(this, os::asynclog_thread)) {
     _initialized = true;
@@ -125,7 +123,7 @@ void AsyncLogWriter::write() {
   bool own_io = false;
 
   { // critical region
-    AsyncLogLocker lock;
+    AsyncLogLocker locker(&_lock);
 
     _buffer.pop_all(&logs);
     // append meta-messages of dropped counters
